<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            fontPath="@string/main_fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/naslov_molitve"
            android:textSize="14sp"
            tools:ignore="MissingPrefix"
            android:layout_marginBottom="-4dp"
            android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/prayer_title_view"
            fontPath="@string/main_fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/reading_dialog_mayor_padding"
            android:background="@drawable/dialog_chat_input_background"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@color/status_bar"
            android:textCursorDrawable="@null"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="@string/main_fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text"
            android:textSize="14dp"
            tools:ignore="MissingPrefix"
            android:layout_marginBottom="-4dp"/>

        <EditText
            android:id="@+id/prayer_text_view"
            fontPath="@string/main_fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/reading_dialog_mayor_padding"
            android:layout_weight="1"
            android:background="@drawable/dialog_chat_input_background"
            android:gravity="center"
            android:padding="3dp"
            android:textColor="@color/status_bar"
            android:textCursorDrawable="@null"
            tools:ignore="MissingPrefix"
            android:maxLines="10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/reading_dialog_minor_padding">


            <android.support.v7.widget.CardView
                android:id="@+id/write_prayer_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="30dp"

                android:layout_margin="@dimen/reading_dialog_minor_padding"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/reading_dialog_main_btn_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:src="@drawable/quit_icon_svg" />

                    <TextView
                        fontPath="@string/main_fonts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/quit_posting_prayer_btn"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix"
                        android:textColor="@color/write_dialog_btn_text"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/write_prayer_dialog_send"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="@dimen/reading_dialog_minor_padding"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/reading_dialog_main_btn_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:src="@drawable/post_prayer_svg" />

                    <TextView
                        fontPath="@string/main_fonts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/post_prayer_btn"
                        android:textColor="@color/write_dialog_btn_text"
                        android:textSize="14sp"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/private_prayer_checkbox"
                fontPath="@string/main_fonts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/privatna_molitva"
                android:textColor="@color/dark_white"
                android:textSize="12sp"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>